# mio-box-3ds

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: gfx.cmake
gfx/: bubble.aseprite  cartridge.aseprite  sd-card.aseprite
include/screens/: main.h
source/: main.c
source/screens/: main.c
